--- a/first/package.json
+++ b/first/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "recoil": "^0.7.4",
     "slick-carousel": "^1.8.1",
+    "style-components": "^0.1.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
